--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,9 @@
               "projects/data-view/tsconfig.lib.json",
               "projects/data-view/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
@@ -65,7 +67,10 @@
               "projects/demo-app/src/favicon.ico",
               "projects/demo-app/src/assets"
             ],
-            "styles": ["projects/demo-app/src/styles.scss"],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "projects/demo-app/src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -127,7 +132,10 @@
               "projects/demo-app/src/favicon.ico",
               "projects/demo-app/src/assets"
             ],
-            "styles": ["projects/demo-app/src/styles.scss"],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "projects/demo-app/src/styles.scss"
+            ],
             "scripts": []
           }
         },
@@ -139,7 +147,9 @@
               "projects/demo-app/tsconfig.spec.json",
               "projects/demo-app/e2e/tsconfig.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         },
         "e2e": {
