--- a/projects/data-view/package.json
+++ b/projects/data-view/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^10.0.9",
-    "@angular/core": "^10.0.9"
+    "@angular/core": "^10.0.9",
+    "@angular/material": "^10.1.3"
   },
   "dependencies": {
     "tslib": "^2.0.0"
