update default project

--- a/angular.json
+++ b/angular.json
@@ -36,9 +36,7 @@
               "projects/data-view/tsconfig.lib.json",
               "projects/data-view/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -147,9 +145,7 @@
               "projects/demo-app/tsconfig.spec.json",
               "projects/demo-app/e2e/tsconfig.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         },
         "e2e": {
@@ -167,5 +163,5 @@
       }
     }
   },
-  "defaultProject": "data-view"
+  "defaultProject": "demo-app"
 }
