--- a/projects/data-view/package.json
+++ b/projects/data-view/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "data-view",
+  "name": "@tds-software/data-view",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^10.0.9",
