--- a/projects/data-view/package.json
+++ b/projects/data-view/package.json
@@ -4,7 +4,8 @@
   "peerDependencies": {
     "@angular/common": "^10.0.9",
     "@angular/core": "^10.0.9",
-    "@angular/material": "^10.1.3"
+    "@angular/material": "^10.1.3",
+    "@angular/flex-layout": "^10.0.0-beta.32"
   },
   "dependencies": {
     "tslib": "^2.0.0"
