--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,8 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "displayBlock": true
         }
       },
       "root": "projects/demo-app",
