--- a/angular.json
+++ b/angular.json
@@ -67,7 +67,7 @@
               "projects/demo-app/src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "projects/demo-app/src/scss/app-core.scss",
               "projects/demo-app/src/styles.scss"
             ],
             "scripts": []
@@ -132,7 +132,7 @@
               "projects/demo-app/src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "projects/demo-app/src/scss/app-core.scss",
               "projects/demo-app/src/styles.scss"
             ],
             "scripts": []
