Add deploy to github pages

--- a/angular.json
+++ b/angular.json
@@ -160,6 +160,12 @@
               "devServerTarget": "demo-app:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "/tds-data-view/"
+          }
         }
       }
     }
