--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,18 @@
     },
     {
       "path": "./projects/demo-app/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/query-view/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/query-view/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/core/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/core/tsconfig.spec.json"
     }
 ]
 }
