Update angular dependencies

--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
@@ -138,7 +137,7 @@
       "prefix": "tds",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/query-view/tsconfig.lib.json",
             "project": "projects/query-view/ng-package.json"
